// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar test NavBar snapshot with user 1`] = `
<AppBar
  className="appbar"
  position="static"
>
  <Toolbar>
    <Typography
      className="flex"
      color="inherit"
      variant="title"
    >
      Name of the restaurant
    </Typography>
    <Hidden
      only="xs"
    >
      <Button
        color="inherit"
      >
        Order
      </Button>
      <Button
        color="inherit"
      >
        Menu
      </Button>
      <Button
        color="inherit"
        onClick={[Function]}
      >
        Logout
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          Profile
        </MenuItem>
        <MenuItem>
          My account
        </MenuItem>
        <MenuItem
          onClick={[Function]}
        >
          Logout
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar test NavBar snapshot without user 1`] = `
<AppBar
  className="appbar"
  position="static"
>
  <Toolbar>
    <Typography
      className="flex"
      color="inherit"
      variant="title"
    >
      Name of the restaurant
    </Typography>
    <Hidden
      only="xs"
    >
      <Button
        color="inherit"
      >
        Order
      </Button>
      <Button
        color="inherit"
      >
        Menu
      </Button>
      <Button
        color="inherit"
        onClick={[Function]}
      >
        Login
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          Profile
        </MenuItem>
        <MenuItem>
          My account
        </MenuItem>
        <MenuItem
          onClick={[Function]}
        >
          Login
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;
